# DUJARDIN-DENIAU_VPO_TP2

./: CMakeCache.txt  README.md  main.py  pyvenv.cfg
1-OpenCV-Basic/: CMakeLists.txt  main.cpp  main.py
2-OpenCV-Morphology/: CMakeLists.txt
3-OpenCV-DFT/: CMakeLists.txt  dftSkeleton.cpp
Scripts/: activate  activate.bat
imagesDeTest/: FFT of peppers-512.tif  peppers-512_noise.tif  peppers-512bin.tif
tp2/: pyvenv.cfg
tp2/Scripts/: activate  activate.bat
tp2_env/: pyvenv.cfg
